Run monit in daemon mode

--- a/monitrc.j2
+++ b/monitrc.j2
@@ -1,3 +1,6 @@
+set daemon 60
+    with start delay 60
+
 # {{ ansible_managed }}
 # /etc/monit/monitrc
 # Inspired by https://mmonit.com/wiki/Monit/ConfigurationExamples
