Check certbot directory for changes (for example renewal of certificates)

--- a/monitrc.j2
+++ b/monitrc.j2
@@ -41,6 +41,9 @@ check filesystem data with path /app/data/
 check directory certificates with path /etc/ssl/certs/
     if changed timestamp then alert
 
+check directory certbot with path /app/machine/certbot/
+    if changed timestamp then alert
+
 check directory secrets with path /app/production/secrets/
     if changed timestamp then alert
 
