Fix path to `htpasswd` file and make Monit listen on localhost

--- a/monitrc.j2
+++ b/monitrc.j2
@@ -27,13 +27,14 @@ set ssl options {
 # [Monit HTTPD](https://mmonit.com/monit/documentation/monit.html#MONIT-HTTPD)
 set httpd
     port 2812
+    use address 127.0.0.1
     unixsocket /run/monit.socket
     with ssl {
         pemchain: /app/machine/certbot/conf/live/{{ non_www_host }}/fullchain.pem
         pemkey: /app/machine/certbot/conf/live/{{ non_www_host }}/privkey.pem
     }
     allow monit:{{ monit_password }}
-    allow md5 /app/machine/nginx/htpasswd
+    allow md5 /app/machine/nginx/.htpasswd
 
 check system {{ non_www_host }}
     if loadavg (5min) > 3 then alert
