--- a/monitrc.j2
+++ b/monitrc.j2
@@ -62,11 +62,16 @@ check directory certificates with path /etc/ssl/certs/
 check directory certbot with path /app/machine/certbot/
     if changed timestamp then alert
 
+check file htpasswd with path /app/machine/nginx/.htpasswd
+    if changed timestamp then alert
+
 check directory secrets with path /app/production/secrets/
     if changed timestamp then alert
 
 check file environment with path /app/production/.env
-    if failed checksum then alert
+    if changed timestamp then alert
+
+check directory ssh with path /app/.ssh/
     if changed timestamp then alert
 
 # `make network-interfaces`
