--- a/monitrc.j2
+++ b/monitrc.j2
@@ -90,6 +90,13 @@ check program docker with path "/usr/bin/systemctl --quiet is-active docker"
 check program docker_healthcheck with path /app/machine/monit_docker_healthcheck.sh
     if status != 0 for 3 cycles then alert
 
+check process sshd with pidfile /var/run/sshd.pid
+    start program "/usr/bin/systemctl start sshd"
+    restart program "/usr/bin/systemctl restart sshd"
+    stop program "/usr/bin/systemctl stop sshd"
+    if failed port 22 protocol ssh then restart
+    if 5 restarts within 5 cycles then alert
+
 check host {{ host }} with address {{ host }}
     if failed
         port 80
@@ -101,6 +108,11 @@ check host {{ host }} with address {{ host }}
         with protocol https
         and certificate valid > 7 days
         use ssl
+        for 3 cycles
+    then alert
+    if failed
+        port 22
+        with protocol ssh
         for 3 cycles
     then alert
 
