--- a/monitrc.j2
+++ b/monitrc.j2
@@ -36,7 +36,11 @@ set httpd
     allow localhost
     allow monit:{{ monit_password }}
 
-check system {{ non_www_host }}-system
+#----------------------------------------------------------------------------
+# System
+#----------------------------------------------------------------------------
+
+check system {{ non_www_production_host }}-system
     if loadavg (5min) > 3 then alert
     if loadavg (15min) > 1 then alert
     if memory usage > 80% for 4 cycles then alert
@@ -56,8 +60,44 @@ check filesystem data with path /app/data/
     if space usage > 95% then alert
     if service time > 300 milliseconds for 5 cycles then alert
 
+# List interfaces with `make network-interfaces`
+check network {{ network_interface }}-network with interface {{ network_interface }}
+    if failed link then alert
+    if changed link then alert
+    if saturation > 80% then alert
+    if total upload > 10 GB in last hour then alert
+
+#----------------------------------------------------------------------------
+# Processes
+#----------------------------------------------------------------------------
+
+check process sshd with pidfile /var/run/sshd.pid
+    set onreboot nostart
+    start program "/usr/bin/systemctl start sshd"
+    restart program "/usr/bin/systemctl restart sshd"
+    stop program "/usr/bin/systemctl stop sshd"
+    if failed port 22 protocol ssh then restart
+    if 5 restarts within 5 cycles then alert
+
+#----------------------------------------------------------------------------
+# Security
+#----------------------------------------------------------------------------
+
 check directory certificates with path /etc/ssl/certs/
     if changed timestamp then alert
+
+check directory ssh with path /app/.ssh/
+    if changed timestamp then alert
+    if failed uid cloud then alert
+    if failed gid cloud then alert
+    if failed permission 700 then alert
+
+check file authorized_keys with path /app/.ssh/authorized_keys
+    if failed checksum then alert
+    if changed timestamp then alert
+    if failed uid cloud then alert
+    if failed gid cloud then alert
+    if failed permission 600 then alert
 
 check directory certbot with path /app/machine/certbot/
     if changed timestamp then alert
@@ -69,15 +109,9 @@ check file htpasswd with path /app/machine/nginx/.htpasswd
     if failed gid root then alert
     if failed permission 600 then alert
 
-check directory ssh with path /app/.ssh/
-    if changed timestamp then alert
-
-# `make network-interfaces`
-check network {{ network_interface }}-network with interface {{ network_interface }}
-    if failed link then alert
-    if changed link then alert
-    if saturation > 80% then alert
-    if total upload > 10 GB in last hour then alert
+#----------------------------------------------------------------------------
+# Docker
+#----------------------------------------------------------------------------
 
 # [Check whether Docker is running](https://docs.docker.com/engine/daemon/troubleshoot/#check-whether-docker-is-running)
 check program docker with path "/usr/bin/systemctl --quiet is-active docker"
@@ -86,100 +120,67 @@ check program docker with path "/usr/bin/systemctl --quiet is-active docker"
 check program docker_healthcheck with path /app/machine/monit_docker_healthcheck.sh
     if status != 0 for 3 cycles then alert
 
-check process sshd with pidfile /var/run/sshd.pid
-    start program "/usr/bin/systemctl start sshd"
-    restart program "/usr/bin/systemctl restart sshd"
-    stop program "/usr/bin/systemctl stop sshd"
-    if failed port 22 protocol ssh then restart
-    if 5 restarts within 5 cycles then alert
+#----------------------------------------------------------------------------
+# Hosts
+#----------------------------------------------------------------------------
 
-check host {{ non_www_host }}-host with address {{ non_www_host }}
+check host {{ non_www_production_host }}-host with address {{ non_www_production_host }}
     if failed
         port 22
         with protocol ssh
         for 3 cycles
     then alert
 
-#------------#
-# Production #
-#------------#
+{% for host in [production_host, staging_host] %}
 
-check host {{ host }}-host with address {{ host }}
-    if failed
-        port 80
-        with protocol http
-        for 3 cycles
-    then alert
-    if failed
-        port 443
-        with protocol https
-        and certificate valid > 7 days
-        use ssl
-        for 3 cycles
-    then alert
+    #---- {{ host }} ----#
 
-check file production-environment with path /app/production/.env
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 600 then alert
+    check host {{ host }}-host with address {{ host }}
+        if failed
+            port 80
+            with protocol http
+            for 3 cycles
+        then alert
+        if failed
+            port 443
+            with protocol https
+            and certificate valid > 7 days
+            use ssl
+            for 3 cycles
+        then alert
 
-check directory production-secrets with path /app/production/secrets/
-    if changed timestamp then alert
+{% endfor %}
 
-check file production-postgres_passwords with path /app/production/secrets/postgres_passwords
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 600 then alert
+#----------------------------------------------------------------------------
+# Environments
+#----------------------------------------------------------------------------
 
-check file production-postgres_password with path /app/production/secrets/postgres_password
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 644 then alert
+{% for environment in ['production', 'staging'] %}
 
-#-------------#
-#   Staging   #
-#-------------#
+    #---- {{ environment }} ----#
 
-check host {{ staging_host }}-host with address {{ staging_host }}
-    if failed
-        port 80
-        with protocol http
-        for 3 cycles
-    then alert
-    if failed
-        port 443
-        with protocol https
-        and certificate valid > 7 days
-        use ssl
-        for 3 cycles
-    then alert
+    check file {{ environment }}-dotenv with path /app/{{ environment }}/.env
+        if failed checksum then alert
+        if changed timestamp then alert
+        if failed uid cloud then alert
+        if failed gid cloud then alert
+        if failed permission 600 then alert
 
-check file environment with path /app/staging/.env
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 600 then alert
+    check directory {{ environment }}-secrets with path /app/{{ environment }}/secrets/
+        if changed timestamp then alert
 
-check directory secrets with path /app/staging/secrets/
-    if changed timestamp then alert
+    check file {{ environment }}-postgres_passwords with path /app/{{ environment }}/secrets/postgres_passwords
+        if failed checksum then alert
+        if changed timestamp then alert
+        if failed uid cloud then alert
+        if failed gid cloud then alert
+        if failed permission 600 then alert
 
-check file staging-postgres_passwords with path /app/staging/secrets/postgres_passwords
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 600 then alert
+    check file {{ environment }}-postgres_password with path /app/{{ environment }}/secrets/postgres_password
+        if failed checksum then alert
+        if changed timestamp then alert
+        if failed uid cloud then alert
+        if failed gid cloud then alert
+        if failed permission 644 then alert
 
-check file staging-postgres_password with path /app/staging/secrets/postgres_password
-    if failed checksum then alert
-    if changed timestamp then alert
-    if failed uid cloud then alert
-    if failed gid cloud then alert
-    if failed permission 644 then alert
+{% endfor %}
