Make all .env variables available to the ansible playbook and use the same casing for variable definitions in the playbook

--- a/aliases.j2
+++ b/aliases.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 # /etc/aliases
 
-root: {{ email_address }}
-cloud: {{ email_address }}
-default: {{ email_address }}
+root: {{ EMAIL_ADDRESS }}
+cloud: {{ EMAIL_ADDRESS }}
+default: {{ EMAIL_ADDRESS }}
