--- a/monitrc.j2
+++ b/monitrc.j2
@@ -131,7 +131,7 @@ check host {{ NON_WWW_PRODUCTION_HOST }}-host with address {{ NON_WWW_PRODUCTION
         for 3 cycles
     then alert
 
-{% for host in [PRODUCTION_HOST, STAGING_HOST] %}
+{% for host in [PRODUCTION_HOST, STAGING_HOST, TELEMETRY_HOST] %}
 
     #---- {{ host }} ----#
 
