--- a/monitrc.j2
+++ b/monitrc.j2
@@ -28,9 +28,9 @@ set ssl options {
 # [Monit HTTPD](https://mmonit.com/monit/documentation/monit.html#MONIT-HTTPD)
 set httpd
     port 2812
-    use address 127.0.0.1
     unixsocket /var/run/monit.socket
-    allow localhost
+    use address 0.0.0.0
+    allow 0.0.0.0/0
     allow monit:{{ MONIT_PASSWORD }}
 
 #----------------------------------------------------------------------------
