--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -5,37 +5,36 @@ api:
   playground: true
 
 sources:
-  docker:
-    type: docker_logs
+  journald:
+    type: journald
+
+  vector_logs:
+    type: internal_logs
 
   vector_metrics:
     type: internal_metrics
 
-transforms:
-  msg_parser:
-    type: remap
-    inputs: [docker]
-    source: |
-      .message = parse_json(.message) ?? .message
-
 sinks:
   logs:
-    inputs: [msg_parser]
+    inputs:
+      - journald
+      - vector_logs
     type: elasticsearch
     endpoints: [http://localhost:{{ LOGS_HTTP_PORT }}/insert/elasticsearch/]
     mode: bulk
     api_version: v8
     compression: gzip
     healthcheck:
-      enabled: false
+      enabled: true
     query:
       _msg_field: message,msg,_msg,message.message,message.log
       _time_field: timestamp
       _stream_fields: host,container_name,source_type,label.com.docker.compose.service
 
   metrics:
-    inputs: [vector_metrics]
+    inputs:
+      - vector_metrics
     type: prometheus_remote_write
     endpoint: http://localhost:{{ METRICS_HTTP_PORT }}/api/v1/write
     healthcheck:
-      enabled: false
+      enabled: true
