--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -8,16 +8,33 @@ sources:
   journald:
     type: journald
 
+  docker_logs:
+    type: docker_logs
+
   vector_logs:
     type: internal_logs
+
+  host_metrics:
+    type: host_metrics
 
   vector_metrics:
     type: internal_metrics
 
+  # postgresql_metrics
+  #   type: postgresql_metrics
+  #   endpoints:
+  #     - postgresql://postgres:vector@localhost:5432/postgres
+
+  # nginx_metrics:
+  #   type: nginx_metrics
+  #   endpoints:
+  #     - http://localhost:8000/basic_status
+
 sinks:
-  logs:
+  journald:
     inputs:
       - journald
+      - docker_logs
       - vector_logs
     type: elasticsearch
     endpoints: [http://localhost:{{ LOGS_HTTP_PORT }}/insert/elasticsearch/]
@@ -25,16 +42,21 @@ sinks:
     api_version: v8
     compression: gzip
     healthcheck:
-      enabled: true
+      enabled: false
     query:
-      _msg_field: message,msg,_msg,message.message,message.log
-      _time_field: timestamp
-      _stream_fields: host,container_name,source_type,label.com.docker.compose.service
+      # https://docs.victoriametrics.com/victorialogs/keyconcepts/#message-field
+      # https://manpages.ubuntu.com/manpages/focal//man7/systemd.journal-fields.7.html
+      # https://vector.dev/docs/reference/configuration/sources/docker_logs/#output-logs
+      # https://vector.dev/docs/reference/configuration/sources/internal_logs/#output-logs
+      _msg_field: MESSAGE,message
+      _time_field: SYSLOG_TIMESTAMP,timestamp
+      _stream_fields: _HOSTNAME,_COMM,host,source_type,container_name
 
   metrics:
     inputs:
+      - host_metrics
       - vector_metrics
     type: prometheus_remote_write
     endpoint: http://localhost:{{ METRICS_HTTP_PORT }}/api/v1/write
     healthcheck:
-      enabled: true
+      enabled: false
