--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -31,7 +31,7 @@ sources:
   #     - http://localhost:8000/basic_status
 
 sinks:
-  journald:
+  logs:
     inputs:
       - journald
       - docker_logs
