Exclude /app/data mountpoint (as it results in a `FFI function "statvfs" call failed` error)

--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -16,6 +16,10 @@ sources:
 
   host_metrics:
     type: host_metrics
+    filesystem:
+      mountpoints:
+        excludes:
+          - /app/data
 
   vector_metrics:
     type: internal_metrics
