--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -7,6 +7,8 @@ api:
 sources:
   journald:
     type: journald
+    exclude_units:
+      - docker.service
 
   docker_logs:
     type: docker_logs
@@ -19,7 +21,9 @@ sources:
     filesystem:
       mountpoints:
         excludes:
-          - /app/data
+          - /run/docker/*
+          - /app/data/docker/*
+          - /home/cloud/data/docker/*
 
   vector_metrics:
     type: internal_metrics
@@ -54,7 +58,7 @@ sinks:
       # https://vector.dev/docs/reference/configuration/sources/internal_logs/#output-logs
       _msg_field: MESSAGE,message
       _time_field: SYSLOG_TIMESTAMP,timestamp
-      _stream_fields: _HOSTNAME,_COMM,host,source_type,container_name
+      _stream_fields: _HOSTNAME,_COMM,_SYSTEMD_UNIT,host,source_type,container_name
 
   metrics:
     inputs:
