Add telemetry landing page and remove pipelines GraphQL endpoint

--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -1,6 +1,6 @@
 api:
-  address: 0.0.0.0:{{ PIPELINES_HTTP_PORT }}
-  enabled: true
+  # address: 0.0.0.0:{{ PIPELINES_HTTP_PORT }}
+  enabled: false
   graphql: true
   playground: true
 
