--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -16,6 +16,11 @@ sources:
   vector_logs:
     type: internal_logs
 
+  opentelemetry:
+    type: opentelemetry
+    grpc:
+      address: 0.0.0.0:{{ TELEMETRY_GPRC_PORT }}
+
   host_metrics:
     type: host_metrics
     filesystem:
@@ -44,6 +49,7 @@ sinks:
       - journald
       - docker_logs
       - vector_logs
+      - opentelemetry
     type: elasticsearch
     endpoints: [http://localhost:{{ LOGS_HTTP_PORT }}/insert/elasticsearch/]
     mode: bulk
@@ -64,6 +70,7 @@ sinks:
     inputs:
       - host_metrics
       - vector_metrics
+      - opentelemetry
     type: prometheus_remote_write
     endpoint: http://localhost:{{ METRICS_HTTP_PORT }}/api/v1/write
     healthcheck:
