--- a/monitrc.j2
+++ b/monitrc.j2
@@ -72,10 +72,17 @@ check network {{ NETWORK_INTERFACE }}-network with interface {{ NETWORK_INTERFAC
 # Processes
 #----------------------------------------------------------------------------
 
-check process sshd with pidfile /var/run/sshd.pid
-    start program "/usr/bin/systemctl start sshd"
-    restart program "/usr/bin/systemctl restart sshd"
-    stop program "/usr/bin/systemctl stop sshd"
+check process ssh with path "/usr/bin/systemctl --quiet is-active ssh"
+    start program "/usr/bin/systemctl start ssh"
+    restart program "/usr/bin/systemctl restart ssh"
+    stop program "/usr/bin/systemctl stop ssh"
+    if failed port 22 protocol ssh then restart
+    if 5 restarts within 5 cycles then alert
+
+check process vector with path "/usr/bin/systemctl --quiet is-active vector"
+    start program "/usr/bin/systemctl start vector"
+    restart program "/usr/bin/systemctl restart vector"
+    stop program "/usr/bin/systemctl stop vector"
     if failed port 22 protocol ssh then restart
     if 5 restarts within 5 cycles then alert
 
@@ -115,9 +122,13 @@ check file htpasswd with path /app/machine/nginx/.htpasswd
 
 # [Check whether Docker is running](https://docs.docker.com/engine/daemon/troubleshoot/#check-whether-docker-is-running)
 check program docker with path "/usr/bin/systemctl --quiet is-active docker"
-    if status != 0 then alert
+    start program "/usr/bin/systemctl start docker"
+    restart program "/usr/bin/systemctl restart docker"
+    stop program "/usr/bin/systemctl stop docker"
+    if status != 0 then restart
+    if 5 restarts within 5 cycles then alert
 
-check program docker_healthcheck with path /app/machine/monit_docker_healthcheck.sh
+check program docker_healthcheck with path /app/machine/docker_containers_healthcheck.sh
     if status != 0 for 3 cycles then alert
 
 #----------------------------------------------------------------------------
