--- a/monitrc.j2
+++ b/monitrc.j2
@@ -69,22 +69,33 @@ check network {{ NETWORK_INTERFACE }}-network with interface {{ NETWORK_INTERFAC
     if total upload > 10 GB in last hour then alert
 
 #----------------------------------------------------------------------------
-# Processes
+# Services and Containers
 #----------------------------------------------------------------------------
 
-check process ssh with path "/usr/bin/systemctl --quiet is-active ssh"
-    start program "/usr/bin/systemctl start ssh"
-    restart program "/usr/bin/systemctl restart ssh"
-    stop program "/usr/bin/systemctl stop ssh"
-    if failed port 22 protocol ssh then restart
+check program sshd with path "/usr/bin/systemctl --quiet is-active sshd"
+    start program "/usr/bin/systemctl start sshd"
+    restart program "/usr/bin/systemctl restart sshd"
+    stop program "/usr/bin/systemctl stop sshd"
+    if status != 0 then restart
     if 5 restarts within 5 cycles then alert
 
-check process vector with path "/usr/bin/systemctl --quiet is-active vector"
+check program vector with path "/usr/bin/systemctl --quiet is-active vector"
     start program "/usr/bin/systemctl start vector"
     restart program "/usr/bin/systemctl restart vector"
     stop program "/usr/bin/systemctl stop vector"
-    if failed port 22 protocol ssh then restart
+    if status != 0 then restart
     if 5 restarts within 5 cycles then alert
+
+# [Check whether Docker is running](https://docs.docker.com/engine/daemon/troubleshoot/#check-whether-docker-is-running)
+check program docker with path "/usr/bin/systemctl --quiet is-active docker"
+    start program "/usr/bin/systemctl start docker"
+    restart program "/usr/bin/systemctl restart docker"
+    stop program "/usr/bin/systemctl stop docker"
+    if status != 0 then restart
+    if 5 restarts within 5 cycles then alert
+
+check program docker_containers_healthcheck with path /app/machine/docker_containers_healthcheck.sh
+    if status != 0 for 3 cycles then alert
 
 #----------------------------------------------------------------------------
 # Security
@@ -115,21 +126,6 @@ check file htpasswd with path /app/machine/nginx/.htpasswd
     if failed uid root then alert
     if failed gid root then alert
     if failed permission 644 then alert
-
-#----------------------------------------------------------------------------
-# Docker
-#----------------------------------------------------------------------------
-
-# [Check whether Docker is running](https://docs.docker.com/engine/daemon/troubleshoot/#check-whether-docker-is-running)
-check program docker with path "/usr/bin/systemctl --quiet is-active docker"
-    start program "/usr/bin/systemctl start docker"
-    restart program "/usr/bin/systemctl restart docker"
-    stop program "/usr/bin/systemctl stop docker"
-    if status != 0 then restart
-    if 5 restarts within 5 cycles then alert
-
-check program docker_healthcheck with path /app/machine/docker_containers_healthcheck.sh
-    if status != 0 for 3 cycles then alert
 
 #----------------------------------------------------------------------------
 # Hosts
