Add cleartext password for `make monit`

--- a/monitrc.j2
+++ b/monitrc.j2
@@ -32,10 +32,11 @@ set ssl options {
 # [Monit HTTPD](https://mmonit.com/monit/documentation/monit.html#MONIT-HTTPD)
 set httpd
     port {{ MONITOR_HTTP_PORT }}
-    unixsocket /var/run/monit.socket
     use address 0.0.0.0
     allow 0.0.0.0/0
     allow md5 /app/machine/nginx/.htpasswd
+    # To run `sudo monit status` a cleartext password must be set but not known
+    allow monit:{{ lookup('pipe', 'openssl rand -base64 32') }}
 
 #----------------------------------------------------------------------------
 # System
