Exclude /home/cloud/data itself (and remove unnecessary symlink to it)

--- a/vector.yml.j2
+++ b/vector.yml.j2
@@ -32,8 +32,8 @@ sources:
       mountpoints:
         excludes:
           - /run/docker/*
-          - /app/data/docker/*
-          - /home/cloud/data/docker/*
+          - /home/cloud/data
+          - /home/cloud/data/*
 
   vector_metrics:
     type: internal_metrics
