--- a/monitrc.j2
+++ b/monitrc.j2
@@ -58,6 +58,10 @@ check system {{ HOST }}-system
     # 100%
     if cpu usage > 80% for 4 cycles then alert
 
+check filesystem data with path /
+    if space usage > 80% then alert
+    if service time > 300 milliseconds for 5 cycles then alert
+
 check filesystem data with path /app/data/
     if space usage > 95% then alert
     if service time > 300 milliseconds for 5 cycles then alert
