Configure monit sender email address

--- a/monitrc.j2
+++ b/monitrc.j2
@@ -12,6 +12,7 @@ set init
 
 # Configure email alerts
 set mailserver {{ SMTP_HOST }} port {{ SMTP_PORT }}
+set mail-format { from: {{ FROM_EMAIL_ADDRESS }} }
 set alert {{ EMAIL_ADDRESS }}
 
 # Test email alerts
