--- a/monitrc.j2
+++ b/monitrc.j2
@@ -171,7 +171,7 @@ check host {{ HOST }}-host with address {{ HOST }}
             status = 200
             for 3 cycles
         then alert
-    {% endif }
+    {% endif %}
 
 {% endfor %}
 
